# astro-sdk

./: .coveragerc  .deepsource.toml  .dockerignore  .env-template  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  2.2.0  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.build  INSTALLATION.MD  INSTALLATION.md  LICENSE  Makefile  Makefile.mk  README.md  REFERENCE.md  RELEASE.md  TUTORIAL.md  ci-test-connections.yaml  codecov.yml  conftest.py  constraints-3.10-2.2.5.txt  constraints-3.10-2.3.4.txt  constraints-3.10-2.4.2.txt  constraints-3.10-2.5.1.txt  constraints-3.10-2.5.3.txt  constraints-3.10-2.6.0.txt  constraints-3.10-2.6.txt  constraints-3.10-2.7.txt  constraints-3.10-2.8.txt  constraints-3.11-2.7.txt  constraints-3.11-2.8.txt  constraints-3.7-2.2.5.txt  (+31 more)
.github/: labeler.yml  (+4 more)
python-sdk/: .dockerignore  .env-template  .gitignore  .test_durations  Makefile  README.md  Tiltfile  conftest.py  noxfile.py  pyproject.toml
python-sdk/dev/: Dockerfile  docker-compose.yaml  local_flask_lineage_server.py  replace_dependencies.py
python-sdk/dev/dags/: example_datasets.py
python-sdk/dev/integration_test_scripts/: get_latest_runtime_image_tag.py  replace_dependencies.py  trigger_dag.py
python-sdk/dev/scripts/: databricks.py  pre_commit_context_typing_compat.py  pre_commit_readme_sync.py  replace_dependencies.py
python-sdk/docs/: CHANGELOG.md  aep  concepts.rst  conf.py  configurations.rst  index.rst  operators.rst  supported_databases.rst
python-sdk/docs/aep/: index.rst
python-sdk/docs/development/: CONTRIBUTING.md  DEVELOPMENT.md  RELEASE.md
python-sdk/docs/getting-started/: GETTING_STARTED.md
python-sdk/docs/guides/: concepts.rst  databricks.rst  openlineage.rst  operators.rst  xcom_backend.rst
python-sdk/example_dags/: .airflowignore  README.md  advanced.py  basic.py  calculate_popular_movies.py  calculate_popular_movies_by_genre.py  calculate_popular_movies_df.py  calculate_top_2_movies_using_dataframe.py  example_amazon_s3_postgres.py  example_amazon_s3_postgres_load_and_save.py  example_amazon_s3_snowflake_transform.py  example_append.py  example_bigquery_dynamic_map_task.py  example_check_column.py  example_check_table.py  example_data_validation.py  example_dataframe_api.py  example_datasets.py  example_duckdb.py  example_duckdb_load_transform_dataframe_and_save.py  example_dynamic_task_template.py  example_google_bigquery_gcs_load_and_save.py  example_load_file.py  example_load_file_redshift.py  example_merge.py  example_mssql_transform.py  example_mysql_transform.py  example_s3_to_databricks_delta.py  example_snowflake_partial_table_with_append.py  example_sqlite_load_transform.py  example_transform.py  example_transform_file.py  example_universal_transfer_operator.py  test.py
python-sdk/example_dags/data/: delete_aggregated_tables.txt  delete_temp.txt  delete_test.txt  delete_tmp.txt  homes2.csv  sample_pip_del.csv
python-sdk/mk/: container.mk  local.mk
python-sdk/src/astro/: __init__.py  constants.py  exceptions.py  options.py  query_modifier.py  run_dag.py  session.py  session_modifier.py  settings.py  table.py  test_dag.py
python-sdk/src/transfers/: constants.py  universal_transfer_operator.py  utils.py
python-sdk/src/uto/: universal_transfer_operator.py  utils.py
python-sdk/tests/: integration_test_dag.py  modified_constraint_file.txt  modified_constraint_file_2.2.5.txt  modified_constraint_file_2.6.3-python-3.11.txt  test_constants.py  test_example_dags.py  test_options.py  test_run_dag.py  test_settings.py
python-sdk/tests/airflow/: test_datasets.py
python-sdk/tests/airflow_integrations/: test_datasets.py
python-sdk/tests/airflow_tests/: test_datasets.py
python-sdk/tests/benchmark/: Dockerfile  Makefile  README.md  analyse.py  auto_generated_results.md  config-bigquery.json  config-ci.json  config-postgres.json  config-redshift.json  config-snowflake.json  config-weekly.json  config.json  datasets.md  download_datasets.sh  gen_config.py  results.md  run.py  run.sh  run_benchmark_ci.sh  settings.py  synthetic_csv_generator.py  synthetic_ndjson_generator.py  synthetic_parquet_generator.py  test-connections.yaml  wait_for_completion.sh  wait_for_status.sh
python-sdk/tests/custom_backend/: test_serializer.py
python-sdk/tests/data/: column_name_mixed_case.json  covid_overview.csv  data_validation.csv  delimiter_dollar.csv  github_single_level_nested.ndjson  homes3.csv  homes_main.csv  homes_merge_2.csv  homes_pattern_2.csv  homes_upper.csv  homes_uppercase.csv  imdb_v2.csv  order_check_nrows.ndjson  sample.json  sample.xlsx  sample_part2.csv  sample_part2_without_unicode.csv  sample_without_unicode.csv  sample_without_unicode.json  sample_without_unicode.ndjson  sample_without_unicode.parquet
python-sdk/tests/databases/: test_all_databases.py  test_base_database.py  test_bigquery.py  test_duckdb.py  test_mssql.py  test_mysql.py  test_postgres.py  test_redshift.py  test_snowflake.py  test_sqlite.py
python-sdk/tests/databricks/: test_databricks_api_util.py  test_delta.py  test_load.py  test_util.py
python-sdk/tests/databricks_tests/: test_databricks_api_util.py
python-sdk/tests/dataframes/: pandas.py  test_pandas.py
python-sdk/tests_integration/: conftest.py  data  integration_test_dag.py  test_example_dags.py
sql-cli/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  noxfile.py  pyproject.toml
sql-cli-old/: pyproject.toml
sql-cli/config/: astro-cli.json
sql-cli/sql_cli/: __init__.py  __main__.py  cli.py  configuration.py  connections.py  constants.py  dag_generator.py  dag_render.py  dag_renderer.py  dag_runner.py  exceptions.py  main.py  project.py  run_dag.py  settings.py  sql_directory_parser.py  utils.py  workflow_directory_parser.py
sql-cli/tests/: basic_test.py  test___main__.py  test_configuration.py  test_conn.yaml  test_connections.py  test_dag_generator.py  test_dag_runner.py  test_generate_dag.py  test_main.py  test_project.py  test_run_dag.py  test_sql_directory_parser.py  test_workflow_directory_parser.py  utils.py
(+1022 files in other folders)
