[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "astro-sdk-python"
dynamic = ["version", "description"]

authors = [
    {name = "Astronomer", email = "humans@astronomer.io"},
]
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.7"
dependencies = [
    "apache-airflow>=2.0",
    "markupsafe>=1.1.1,<2.1.0",
    "pandas>=1.3.4,<=1.3.5",
    "pyarrow",
    "python-frontmatter",
    "smart-open",
    "SQLAlchemy>=1.3.18"
]

keywords = ["airflow", "provider", "astronomer", "sql", "decorator", "task flow", "elt", "etl", "dag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
]

[project.optional-dependencies]
tests = [
    "click==8.0.0",
    "pytest>=6.0",
    "pytest-split",
    "pytest-dotenv",
    "requests-mock",
    "pytest-cov",
    "pytest-describe",
    "mypy",
    "sqlalchemy-stubs"  # Change when sqlalchemy is upgraded https://docs.sqlalchemy.org/en/14/orm/extensions/mypy.html
]
google = [
    "apache-airflow-providers-google",
    "sqlalchemy-bigquery>=1.3.0",
    "smart-open[gcs]>=5.2.1",
]
snowflake = [
    "apache-airflow-providers-snowflake",
    "snowflake-sqlalchemy>=1.2.0,<=1.2.4",
    "snowflake-connector-python[pandas]",
]
postgres = [
    "apache-airflow-providers-postgres",
]
amazon = [
    "apache-airflow-providers-amazon",
    "s3fs",
    "smart-open[s3]>=5.2.1",
]
all = [
    "apache-airflow-providers-amazon",
    "apache-airflow-providers-google>=6.4.0",
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-snowflake",
    "smart-open[all]>=5.2.1",
    "snowflake-connector-python[pandas]",
    "snowflake-sqlalchemy>=1.2.0,<=1.2.4",
    "sqlalchemy-bigquery>=1.3.0",
    "s3fs"
]
doc = [
    "sphinx==4.4.0"
]

[project.urls]
Home = "https://astronomer.io/"

[project.entry-points.apache_airflow_provider]
provider_info = "astro.__init__:get_provider_info"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--durations=30 --durations-min=1.0"
env_files = [".env"]
testpaths = ["tests"]
markers = [
    "integration"
]

[tool.flit.module]
name = "astro"  # Or "astro.sql" if you just want this directory, not the entire 'astro'.

[tool.mypy]
color_output = true
#disallow_any_generics = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#explicit_package_bases = true
# TODO: Once we complete #281 we can replace the files parameter by the mypy_path
files = [
    "src/astro/settings.py",
    "src/astro/sql/__init__.py",
    "src/astro/__init__.py",
    "src/astro/sql/operators/load_file.py",
    "src/astro/sql/operators/export_file.py",
    "src/astro/sql/operators/append.py",
    "src/astro/sql/operators/merge.py"
]
follow_imports = "skip"
namespace_packages = true
no_implicit_optional = true
pretty = true
strict_equality = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
