[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "astro-sdk-python"
dynamic = ["version"]
description = """
Astro SDK allows rapid and clean development of {Extract, Load, Transform} workflows using Python and SQL, powered by Apache Airflow.
"""

authors = [
    { name = "Astronomer", email = "humans@astronomer.io" },
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.7"
dependencies = [
    "apache-airflow>=2.0",
    "attrs>=20.3.0",
    "pandas",
    "pyarrow",
    "python-frontmatter",
    "smart-open",
    "SQLAlchemy>=1.3.18",
    "cached_property>=1.5.0;python_version<='3.7'"
]

keywords = ["airflow", "provider", "astronomer", "sql", "decorator", "task flow", "elt", "etl", "dag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Framework :: Apache Airflow",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
tests = [
    "pytest>=6.0",
    "pytest-split",
    "pytest-dotenv",
    "requests-mock",
    "pytest-cov",
    "pytest-describe",
    "types-requests",
    "mypy",
    "sqlalchemy-stubs", # Change when sqlalchemy is upgraded https://docs.sqlalchemy.org/en/14/orm/extensions/mypy.html
]
google = [
    "protobuf",
    "apache-airflow-providers-google==10.10.1rc1",
    "sqlalchemy-bigquery>=1.3.0",
    "smart-open[gcs]>=5.2.1"
]
snowflake = [
    "apache-airflow-providers-snowflake",
    "snowflake-sqlalchemy>=1.2.0",
    "snowflake-connector-python[pandas]"
]
postgres = [
    "apache-airflow-providers-postgres==5.7.1rc1",
]
amazon = [
    "apache-airflow-providers-amazon==8.9.0rc1",
    "s3fs",
    "smart-open[s3]>=5.2.1",
]
azure = [
    "apache-airflow-providers-microsoft-azure",
    "azure-storage-blob",
    "smart-open[azure]>=5.2.1",
]
sftp = [
    "apache-airflow-providers-sftp>=4.0.0",
    "smart-open[ssh]>=5.2.1",
]
ftp = [
    "apache-airflow-providers-ftp>=3.0.0",
    "smart-open>=5.2.1",
]
openlineage = ["openlineage-airflow>=0.17.0"]

databricks = [
    "databricks-cli",
    "apache-airflow-providers-databricks",
    # TODO: Remove this once https://github.com/databricks/databricks-sql-python/pull/191 released
    "databricks-sql-connector<2.9.0",
]

mssql = [
    "apache-airflow-providers-microsoft-mssql>=3.2",
]

mysql = [
    "apache-airflow-providers-mysql",
]

duckdb = [
    "airflow-provider-duckdb>=0.0.2",
]

all = [
    "apache-airflow-providers-amazon==8.9.0rc1",
    "apache-airflow-providers-google==10.10.1rc1",
    "apache-airflow-providers-ftp",
    "apache-airflow-providers-postgres==5.7.1rc1",
    "apache-airflow-providers-snowflake",
    "apache-airflow-providers-sftp",
    "smart-open[all]>=5.2.1",
    "snowflake-connector-python[pandas]",
    "snowflake-sqlalchemy>=1.2.0",
    "sqlalchemy-bigquery>=1.3.0",
    "databricks-cli",
    "apache-airflow-providers-databricks",
    # TODO: Remove this once https://github.com/databricks/databricks-sql-python/pull/191 released
    "databricks-sql-connector<2.9.0",
    "s3fs",
    "protobuf",
    "openlineage-airflow>=0.17.0",
    "apache-airflow-providers-microsoft-azure",
    "azure-storage-blob",
    "apache-airflow-providers-microsoft-mssql>=3.2",
    "airflow-provider-duckdb>=0.0.2",
    "apache-airflow-providers-mysql"
]
doc = [
    "myst-parser>=0.17",
    "sphinx>=4.4.0",
    "sphinx-autoapi==2.0.0", # Multiple FileType class (same name) import is broken in sphinx-autoapi 2.0.1
    "sphinx-rtd-theme"
]

[project.urls]
Home = "https://astronomer.io/"
Source = "https://github.com/astronomer/astro-sdk/tree/main/python-sdk"
Documentation = "https://astro-sdk-python.rtfd.io/"

[project.entry-points.apache_airflow_provider]
provider_info = "astro.__init__:get_provider_info"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--durations=30 --durations-min=1.0"
env_files = [".env"]
testpaths = ["tests", "tests_integration"]
markers = [
    "integration"
]


[tool.flit.module]
name = "astro"  # Or "astro.sql" if you just want this directory, not the entire 'astro'.

[tool.mypy]
color_output = true
#disallow_any_generics = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
files = ["src/astro"]
follow_imports = "skip"
no_implicit_optional = true
pretty = true
strict_equality = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 110
target-version = ['py37', 'py38', 'py39', 'py310']
