[tool.poetry]
name = "astro-sql-cli"
version = "0.0.1"
description = "Empower analysts to build workflows to transform data using SQL"
authors = [
    "Astronomer <humans@astronomer.io>",
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["sql", "transform", "analyst", "workflow", "airflow"]
packages = [{include = "sql_cli"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.scripts]
flow = "sql_cli.__main__:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["sql_cli", "tests"]
