[tool.poetry]
name = "astro-sql-cli"
version = "0.0.0"
description = "Empower analysts to build workflows to transform data using SQL"
authors = [
    "Astronomer <humans@astronomer.io>",
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["sql", "transform", "analyst", "workflow", "airflow", "astronomer"]
packages = [{include = "sql_cli"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Framework :: Apache Airflow",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Home = "https://astronomer.io/"
Source = "https://github.com/astronomer/astro-sdk/sql-cli"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
typer = {extras = ["all"], version = "^0.6.1"}
networkx = "^2.8.7"
Jinja2 = ">=2.10.1, <=3.1"
python-frontmatter = "^1.0.0"
# TODO: sql CLI will require astro python sdk 1.2, so we can't require it until we release that version

[tool.poetry.scripts]
flow = "sql_cli.__main__:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["sql_cli", "tests"]

[tool.mypy]
color_output = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = ["sql_cli"]
follow_imports = "skip"
no_implicit_optional = true
pretty = true
strict_equality = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
